2024-06-01T12:34:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9330295058 # 319
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-01
* notice: last 14d: unq all: 14 61
* notice: prev accum: outdated-unq outdated-all / unq all: 678 3834 / 694 3905
* notice: next accum: outdated-unq outdated-all / unq all: 680 3844 / 694 3905
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-18] / []

2024-06-01T01:34:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9326519885 # 318
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-01
* notice: last 14d: unq all: 16 71
* notice: prev accum: outdated-unq outdated-all / unq all: 675 3718 / 694 3905
* notice: next accum: outdated-unq outdated-all / unq all: 678 3834 / 694 3905
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-17] / []

2024-05-31T12:37:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9318264867 # 317
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-31
* notice: last 14d: unq all: 16 79
* notice: prev accum: outdated-unq outdated-all / unq all: 675 3718 / 693 3904
* notice: next accum: outdated-unq outdated-all / unq all: 675 3718 / 694 3905
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -2 -108 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-17 2024-05-31]

2024-05-31T01:24:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9311491461 # 316