@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-01T12:34:43Z",
-  "count_outdated" : 3844,
-  "uniques_outdated" : 680,
+  "timestamp" : "2024-06-03T01:25:47Z",
+  "count_outdated" : 3846,
+  "uniques_outdated" : 681,
   "count" : 3905,
   "uniques" : 694,
   "views" : [
-    {
-      "timestamp": "2024-05-19T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-21T00:00:00Z",
       "count": 6,
