@@ -1,12 +1,7 @@
 {
-  "count": 61,
-  "uniques": 14,
+  "count": 59,
+  "uniques": 13,
   "views": [
-    {
-      "timestamp": "2024-05-19T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-05-21T00:00:00Z",
       "count": 6,
